--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -18,7 +18,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://scenes/city_scene.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -35,7 +35,7 @@ selected_bottom_panel_item=1
 [ScriptEditor]
 
 open_scripts=["res://scripts/adventurer.gd", "res://scripts/city_scene.gd", "res://scripts/dungeon_run.gd"]
-selected_script="res://scripts/dungeon_run.gd"
+selected_script="res://scripts/city_scene.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
