--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 61,
-"scroll_position": 0.0,
+"row": 164,
+"scroll_position": 138.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,12 +17,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 64,
-"scroll_position": 3.0,
-"selection": false,
+"row": 146,
+"scroll_position": 137.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 146,
+"selection_to_column": 17,
+"selection_to_line": 146,
 "syntax_highlighter": "GDScript"
 }
 
