--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,6 +5,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://scripts/adventurer.gd"
 }, {
+"base": &"Resource",
+"class": &"AdventurerStats",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/adventurer_stats.gd"
+}, {
 "base": &"Node",
 "class": &"DungeonRun",
 "icon": "",
